# Huffman-encoder-sim

./: .gitignore  COMPLETE_GUIDE.md  CONCEPTS.md  Cargo.toml  QUICKSTART.md  README.md  received.txt
.claude/: settings.local.json
crates/app/: Cargo.toml
crates/app/src/: config.rs  input_gen.rs  main.rs  main.rs.bak
crates/core/: Cargo.toml
crates/core/src/: bitio.rs  error.rs  framing.rs  huffman.rs  huffman.rs.bak  lib.rs  metrics.rs  network.rs  packet.rs  reassembly.rs
crates/core/tests/: integration_test.rs
