[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/app",
]

[workspace.dependencies]
# Bounded channels for backpressure
crossbeam-channel = "0.5"

# Seeded randomness for determinism
rand = "0.8"
rand_chacha = "0.3"

# CRC validation
crc32fast = "1.4"

# Structured error handling
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
